fix: put floating layer z-index forward of fullscreen layer z-index

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -60,7 +60,7 @@
 
     // Layers
     --app-fullscreen-layer-order: 1000;
-    --app-floating-layer-order: 900;
+    --app-floating-layer-order: 1100;
 }
 
 @mixin app-light-theme() {
